--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ title: 陆洋
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Young Lu
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: 
+url: "http://georgree.github.io"
 
 # Comment
 comment:
