--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ comment:
 # Social
 social:
     weibo: 5366874726 
-    github: leopardpan
+    github: georgree
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: georgree@foxmail.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
