--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
+    #weibo: 5366874726 
     github: georgree
     # twitter: 
     mail: georgree@foxmail.com
