--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Basic
 title: 陆洋
-subtitle: 个人站
+subtitle: Young'Lu
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: Young Lu
+avatarTitle: @georg're'e
 # 头像里面的描述
 avatarDesc: 
 url: "http://georgree.github.io"
