--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "http://georgree.github.io"
 # Comment
 comment:
     disqus: leopard
-    # uyan: 2143225  # 有言id,登录有言官网申请
+    uyan: 2159435  # 有言id,登录有言官网申请
 
 # Social
 social:
