--- a/_config.yml
+++ b/_config.yml
@@ -15,20 +15,20 @@ comment:
 
 # Social
 social:
-    #weibo: 5366874726 
+    weibo: 
     github: georgree
-    # twitter: 
+    twitter: 
     mail: georgree@foxmail.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+   # id: 8ba1c6be0953b6f9c2ba38e57f615421  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
 ga:
-    id: UA-84134159-3   
+   #id: UA-84134159-3   
     host: auto  
 
 
